frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: frontend
  annotations:
    app.komodor.com/service.link.webhook: http://35.202.170.30:5000/version
    app.komodor.com/service.link.github: https://github.com/hughbrien/frontend
    app.komodor.com/deploy.link.github: https://github.com/hughbrien/frontend
    app.komodor.com/deploy.link.webhook: http://35.202.170.30:5000/version
    app.komodor.com/deploy.link.github-latestchange: https://github.com/hughbrien/frontend/commit/36f90591681b6bd6288553d7962283b3246efbd6
    app.komodor.com/tracked_files: |
      *.yaml
    app.komodor.com/app: https://github.com/hughbrien/frontend
    app.komodor.com/app.ref: 36f90591681b6bd6288553d7962283b3246efbd6

  labels:
    app: frontend
    branch: main
    version: 2.0.7
    author: hughbrien
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        branch: main
        version: 2.0.7
    spec:
      containers:
      - name: frontend
        image: docker.io/hughbrien/frontend:2.0.7
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        securityContext:
          allowPrivilegeEscalation: false
        livenessProbe:
          httpGet:
            path: /healthz/live
            port: 5000
          initialDelaySeconds: 30
          timeoutSeconds: 15
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 15
