frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: frontend
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  ingressClassName: frontend-webhook-service
  rules:
  - http:
      paths:
      - path: /webhook
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 5000
